--- a/blocks/articles/__list/articles__list.css
+++ b/blocks/articles/__list/articles__list.css
@@ -5,5 +5,5 @@
     margin-bottom: 56px;
     padding: 0;
     width: 100%;
-    background-color: #ffffff;
+    gap: 10px;
 }
